# hls-llvm-project

./: README.md  build-hls-llvm-project.sh
clang-tools-extra/clang-tidy/: ClangTidy.h  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h  ClangTidyOptions.cpp
clang-tools-extra/clang-tidy/cppcoreguidelines/: CMakeLists.txt
clang-tools-extra/clang-tidy/hicpp/: CMakeLists.txt
clang-tools-extra/clang-tidy/plugin/: CMakeLists.txt
clang-tools-extra/clang-tidy/tool/: CMakeLists.txt
clang-tools-extra/clang-tidy/xilinx/: AggregateOnApintCheck.cpp  AggregateOnHLSVectorCheck.cpp  AggregateOnHLSVectorCheck.h  CMakeLists.txt  Directive2pragmaCheck.cpp  Directive2pragmaCheck.h  LabelAllLoopsCheck.cpp  TbProcessCheck.cpp  TbProcessCheck.h  XilinxTidyCommon.h  XilinxTidyModule.cpp
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/docs/clang-tidy/checks/: list.rst  xilinx-aggregate-on-hls-vector.rst
clang-tools-extra/test/xilinx-dataflow-lawyer/: xilinx-dataflow-lawyer.cpp
clang-tools-extra/xilinx-dataflow-lawyer/: XilinxDataflowLawyer.cpp
clang/include/clang-c/: Index.h
clang/include/clang/AST/: Attr.h  ExprHLS.h  RecursiveASTVisitor.h  StmtVisitor.h  Type.h
clang/include/clang/Basic/: Attr.td  Builtins.def  BuiltinsFPGA.def  CMakeLists.txt  DiagnosticGroups.td  DiagnosticHLSKinds.td  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  HLSDirective.h  LangOptions.def  LangOptions.h  SourceManager.h  SourceManagerInternals.h  StmtNodes.td  TokenKinds.def  XlxPragmaOption.td
clang/include/clang/Driver/: Options.td
clang/include/clang/Lex/: Preprocessor.h  PreprocessorOptions.h
clang/include/clang/Parse/: CMakeLists.txt  Parser.h
clang/include/clang/Sema/: AttributeList.h  Scope.h  Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h
clang/lib/AST/: Expr.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  QualTypeNames.cpp  Stmt.cpp  StmtPrinter.cpp  StmtProfile.cpp
clang/lib/Basic/: CMakeLists.txt  HLSDirective.cpp  SourceManager.cpp
clang/lib/CodeGen/: CGAtomic.cpp  CGBuiltin.cpp  CGCall.cpp  CGDebugInfo.cpp  CGDebugInfo.h  CGExpr.cpp  CGExprAgg.cpp  CGExprConstant.cpp  CGFPGABuiltin.cpp  CGLoopInfo.cpp  CGLoopInfo.h  CGStmt.cpp  CGXlxAttr.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h  CodeGenTypes.cpp  ModuleBuilder.cpp
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Frontend/: CompilerInvocation.cpp  InitPreprocessor.cpp  PrintPreprocessedOutput.cpp
clang/lib/Lex/: LiteralSupport.cpp  PPMacroExpansion.cpp  Pragma.cpp
clang/lib/Parse/: ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParsePragma.cpp  ParseStmt.cpp  ParseXlxPragma.cpp  Parser.cpp
clang/lib/Sema/: CMakeLists.txt  Scope.cpp  SemaChecking.cpp  SemaDeclAttr.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaStmtAttr.cpp  SemaTemplateInstantiate.cpp  SemaTemplateInstantiateDecl.cpp  SemaType.cpp  SemaXlxAttr.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReaderStmt.cpp  ASTWriterStmt.cpp
clang/lib/StaticAnalyzer/Core/: ExprEngine.cpp
clang/tools/libclang/: CIndex.cpp  CXCursor.cpp
clang/utils/TableGen/: CMakeLists.txt  ClangAttrEmitter.cpp  ClangHLSPragmaOptionEmitter.cpp  TableGen.cpp  TableGenBackends.h
llvm/: CMakeLists.txt
llvm/bindings/ocaml/llvm/: llvm_ocaml.c
llvm/cmake/modules/: CrossCompile.cmake
llvm/docs/: BitCodeFormat.rst  LangRef.rst
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/include/llvm/ADT/: APInt.h  DenseMapInfo.h  STLExtras.h  ilist.h
llvm/include/llvm/Analysis/: AliasAnalysis.h  AssumptionCache.h  CaptureTracking.h  DependenceAnalysis.h  IVDescriptors.h  InstructionPrecedenceTracking.h  LazyValueInfo.h  LoopInfo.h  MustExecute.h  (+13 more)
llvm/lib/Analysis/: AliasAnalysis.cpp  Analysis.cpp  AssumptionCache.cpp  BasicAliasAnalysis.cpp  CMakeLists.txt  CaptureTracking.cpp  ConstantFolding.cpp  DependenceAnalysis.cpp  IVDescriptors.cpp  InstructionPrecedenceTracking.cpp  InstructionSimplify.cpp  IteratedDominanceFrontier.cpp  LazyValueInfo.cpp  LoopAccessAnalysis.cpp  LoopInfo.cpp  MemoryDependenceAnalysis.cpp  MemorySSAUpdater.cpp  MustExecute.cpp  PostDominators.cpp  ScalarEvolution.cpp  ScalarEvolutionExpander.cpp  TargetLibraryInfo.cpp  TargetTransformInfo.cpp  ValueTracking.cpp  XILINXFunctionInfoUtils.cpp  XILINXHLSValueTrackingUtils.cpp  XILINXInterfaceAnalysis.cpp  XILINXLoopInfoUtils.cpp
llvm/lib/AsmParser/: LLLexer.cpp  LLParser.cpp  LLToken.h
llvm/lib/CodeGen/: MachineBasicBlock.cpp
llvm/lib/Demangle/: CMakeLists.txt  Demangle.cpp  ItaniumDemangle.cpp  MicrosoftDemangle.cpp  MicrosoftDemangleNodes.cpp  RustDemangle.cpp
llvm/lib/IR/: Attributes.cpp  BasicBlock.cpp  CMakeLists.txt  ConstantRange.cpp  Constants.cpp  DebugInfo.cpp  DebugInfoMetadata.cpp  DiagnosticInfo.cpp  Dominators.cpp  Instruction.cpp  Instructions.cpp  IntrinsicInst.cpp  LLVMContext.cpp  LLVMContextImpl.h  Operator.cpp  SymbolTableListTraitsImpl.h  Value.cpp  Verifier.cpp  XILINXAggregateUtil.cpp  XILINXFPGAIntrinsicInst.cpp  XILINXHLSIRBuilder.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Support/: APInt.cpp  CMakeLists.txt  CommandLine.cpp  XILINXAggregateUtil.cpp  XILINXFPGACoreInstFactory.cpp  XILINXFPGAPlatformBasic.cpp  XILINXSystemInfo.cpp
llvm/lib/Support/XilinxPlat/: ChipInfo.cpp  CoreInst.cpp  CoreQuerier.cpp  PortAndExprTreeNode.cpp  SqliteSelector.cpp  TargetPlatform.cpp
llvm/lib/TableGen/: Record.cpp  TGParser.cpp  TGParser.h
llvm/tools/opt/: opt.cpp
llvm/unittests/ADT/: APIntTest.cpp  IListTest.cpp
llvm/unittests/Analysis/: CMakeLists.txt  IVDescriptorsTest.cpp  LoopInfoTest.cpp  ScalarEvolutionTest.cpp  ValueTrackingTest.cpp
llvm/unittests/IR/: BasicBlockTest.cpp  ConstantRangeTest.cpp  DominatorTreeBatchUpdatesTest.cpp  DominatorTreeTest.cpp
llvm/unittests/XILINXHLSIR/: CMakeLists.txt  XILINXBRAMIntrinsicsTest.cpp  XILINXDirectIOIntrinsicsTest.cpp  XILINXFloatIntrinsicsTest.cpp  XILINXLoopUtils.cpp  XILINXPragmasTest.cpp
llvm/utils/TableGen/: CodeGenIntrinsics.h  CodeGenTarget.cpp  IntrinsicEmitter.cpp
llvm/utils/kate/: llvm.xml
(+125 files in other folders)
